--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1379,7 +1379,7 @@ body {
 .cid-rahnQ9qHh6 {
   padding-top: 75px;
   padding-bottom: 105px;
-  background-color: #ffffff;
+  background: url("../../../assets/images/mbr-1920x1280.jpg");
 }
 .cid-rahnQ9qHh6 .mbr-section-subtitle {
   color: #767676;
@@ -1430,7 +1430,7 @@ body {
   color: #ffffff;
 }
 .cid-rahnQ9qHh6 .countdown-cont {
-  background: linear-gradient(45deg, #149dcc, #c8ceaf);
+  background: linear-gradient(45deg, #030000, #767676);
   max-width: 700px;
   border-radius: 3px;
   margin: 0 auto;
